Add class Chip8

--- a/chip8-emulator/CMakeLists.txt
+++ b/chip8-emulator/CMakeLists.txt
@@ -1,5 +1,5 @@
 ﻿
-add_executable (chip8 "chip8-emulator.cpp")
+add_executable (chip8 "chip8-emulator.cpp" "Chip8.cpp" "Chip8.hpp")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET chip8 PROPERTY CXX_STANDARD 20)
